# task-planner-app

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.logging.yaml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
infra/fluentd/: Dockerfile  fluentd.conf  fluentd2.conf  fluentd3.conf
infra/nginx/: nginx.conf
services/admin/: Dockerfile  pyproject.toml  start.py
services/admin/src/: main.py
services/admin/src/api/: admin.py  base.py
services/admin/src/core/: database.py  dependencies.py  middleware.py  security.py
services/admin/src/crud/: __init__.py
services/admin/src/models/: manual_day.py
services/admin/src/schemas/: manual_day.py  task.py  (+1 more)
services/auth/: .dockerignore  pyproject.toml  start.py
services/auth/src/: main.py
services/planner/: README.md  pyproject.toml  requirements.txt  start.py
services/planner/alembic/: env.py
services/planner/alembic/versions/: 9393da9873e8_add_relationship_manual_days_to_user.py  da692a350960_add_cascade_attributes_and_passive_.py
services/planner/src/: main.py
services/planner/src/api/: __init__.py  base.py  logger_check.py  manual_day.py  planner.py  task.py
services/planner/src/core/: cache.py  config.py  dependencies.py  middleware.py  rate_limit.py  redis.py  security.py
services/planner/src/crud/: day.py  failed_task.py  manual_day.py  task.py
services/planner/src/models/: __init__.py  day.py  failed_task.py  task_execution.py  user.py
services/planner/src/schemas/: admin.py  user.py
services/planner/tests/integration_tests/: conftest.py  test_task_crud.py  test_user_crud.py
services/planner/tests/unit_tests/: test_cache.py  test_rate_limit.py  test_security.py
services/web/: pyproject.toml  start.py
services/web/alembic/versions/: bdaa9926f648_rebase_database.py
services/web/src/: main.py
services/web/src/api/: __init__.py  base.py
services/web/src/api/v1/: __init__.py  auth.py  base.py  day.py  manual_day.py  planner.py  task.py  task_execution.py  user.py
services/web/src/api/v2/: __init__.py  admin.py  auth.py  manual_day.py  planner.py  task.py  user.py
services/web/src/core/: config.py  log.py  middleware.py  security.py
services/web/src/crud/: __init__.py  task_execution.py
services/web/src/models/: task.py
services/web/src/schemas/: auth.py  day.py  failed_task.py
(+13 files in other folders)
